Add some usage docs to new output
and also to the php-extension.sh file.

Signed-off-by: John McCabe <john@johnmccabe.net>

--- a/template/php7/template.yml
+++ b/template/php7/template.yml
@@ -1,2 +1,6 @@
 language: php
 fprocess: php index.php
+welcome_message: |
+  You have created a new function which uses PHP 7.2.
+  Dependencies and extensions can be added using the composer.yml
+  and php-extension.sh files.
